--- a/TSSLogParser/Properties/launchSettings.json
+++ b/TSSLogParser/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "TSSLogParser": {
       "commandName": "Project",
-      "commandLineArgs": "report -d \"C:\\Users\\cshoward\\Documents\\CaseBuddy.CaseData\\2108100040003867_Anish\""
+      "commandLineArgs": "report -w -d \"C:\\Users\\cshoward\\Documents\\CaseBuddy.CaseData\\2108100040003867_Anish\"",
+      "sqlDebugging": true
     }
   }
 }
